# syntheyes3

./: .gitignore  LICENSE  Makefile  Makefile.all  Makefile.lin  Makefile.pi  README.md  colourutils.cpp  colourutils.hpp  config.cpp  expression.cpp  expression.hpp  expressionlist.cpp  eyeconfig3.txt  fakepi.cpp  font.cpp  font.hpp  gifload.cpp  gifload.hpp  gpio.cpp  gpio.hpp  patterns.h  pi.cpp  syntheyes.cpp  syntheyes.hpp
arduino/: readme.txt  synthears.ino
docs/: LICENSE
drivers/: LightDriver.cpp  LightDriver.hpp  PanelDriver.cpp  PanelDriver.hpp  PicoTiming.cpp  PicoTiming.hpp  PosixTiming.cpp  PosixTiming.hpp  SensorDriver.cpp  SensorDriver.hpp  SerialDriver.cpp  SerialDriver.hpp  ServoDriver.cpp  ServoDriver.hpp  Timing.cpp  Timing.hpp  driverutils.cpp
drivers/display/: Hub75Pi.cpp  Hub75Pi.hpp  Hub75Pico.cpp  Hub75Pico.hpp  MAX7219Panel.cpp  MAX7219Panel.hpp  MAX7219WPanel.cpp  MAX7219WPanel.hpp  SDLPanel.cpp  SDLPanel.hpp  SDLScreen.cpp  SDLScreen.hpp  SDLSinglePanel.cpp  SDLSinglePanel.hpp  Unicorn.cpp  Unicorn.hpp  WS2811PicoPanel.cpp  WS2811PicoPanel.hpp
drivers/lights/: SDLLights.cpp  SDLLights.hpp  WS2811Lights.cpp  WS2811Lights.hpp
drivers/sensor/: CAP1188Sensor.cpp  CAP1188Sensor.hpp  SDLSensor.cpp  SDLSensor.hpp
drivers/serial/: PiSerialDriver.cpp  PiSerialDriver.hpp  VirtualSerialDriver.cpp  VirtualSerialDriver.hpp
drivers/servo/: PiServo.cpp  PiServo.hpp  TestServo.cpp  TestServo.hpp
embedded/: testtar.h
examples/: eyeconfig3-demo.txt  eyeconfig3-raptorsden.txt  eyeconfig3-xerian.txt
pico/: CMakeLists.txt
pico/giflib/: README.txt
(+24 files in other folders)
